<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/azimuth"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/azimuth_sub"
        app:layout_constraintEnd_toStartOf="@+id/pitch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/roll"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pitch"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/roll"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/azimuth"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/azimuth_sub"
        android:layout_width="92dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/azimuth_sub"
        app:layout_constraintEnd_toEndOf="@+id/azimuth"
        app:layout_constraintStart_toStartOf="@+id/azimuth"
        app:layout_constraintTop_toBottomOf="@+id/azimuth" />

    <TextView
        android:id="@+id/roll_sub"
        android:layout_width="46dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/roll_sub"
        app:layout_constraintEnd_toEndOf="@+id/roll"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/roll"
        app:layout_constraintTop_toBottomOf="@+id/roll" />

    <TextView
        android:id="@+id/pitch_sub"
        android:layout_width="76dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/pitch_sub"
        app:layout_constraintEnd_toEndOf="@+id/pitch"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/pitch"
        app:layout_constraintTop_toBottomOf="@+id/pitch" />

    <EditText
        android:id="@+id/host_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/host_ip_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pitch_sub" />

    <EditText
        android:id="@+id/host_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/host_port_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/host_ip" />

    <Button
        android:id="@+id/orientation_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/orientation_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/host_update_button" />

    <Button
        android:id="@+id/host_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/host_update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/host_port" />
</android.support.constraint.ConstraintLayout>